# pradGEMdig

./: .gitignore  GEMIonModel.h  GEMStripMap.h  GEMdig.C  GEMdigVariables.h  compare.C
gem_reconstruction/: CMakeLists.txt  EXE_CMakeLists.txt  example.cpp  example_old.cpp
gem_reconstruction/config/: gem_tracking.conf
gem_reconstruction/include/: GEMCluster.h  GEMDetector.h  GEMDetectorLayer.h  GEMPlane.h
gem_reconstruction/src/: GEMCluster.cpp  GEMDetector.cpp  GEMDetectorLayer.cpp  GEMPlane.cpp
